mysql-deployment.yaml
## Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql57
  labels:
    app: mysql57
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql57
  template:
    metadata:
      labels:
        app: mysql57
    spec:
      containers:
        - name: mysql57
          image: mysql:5.7
          ports:
            - containerPort: 3306
          resources: {}
            #limits:
            #  cpu: 2000m
            #  memory: 512Mi
            #requests:
            #  cpu: 2000m
            #  memory: 512Mi
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            exec:
              command: ["mysqladmin", "-uroot", "-p${MYSQL_ROOT_PASSWORD}", "ping"]
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            exec:
              command: ["mysqladmin", "-uroot", "-p${MYSQL_ROOT_PASSWORD}", "ping"]
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - name: config
              mountPath: /etc/mysql/conf.d/my.cnf
              subPath: my.cnf
            - name: localtime
              readOnly: true
              mountPath: /etc/localtime
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mysql-pvc
        - name: config
          configMap:
            name: mysql-config
        - name: localtime
          hostPath:
            type: File
            path: /etc/localtime
---
## Service
apiVersion: v1
kind: Service
metadata:
  name: mysql57
  labels:
    app: mysql57
spec:
  type: NodePort
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      nodePort: 30033
  selector:
    app: mysql57
